fixed sticky header by adding a z-index to it to keep it on top of the relatively positioned grey boxes

--- a/css/index.css
+++ b/css/index.css
@@ -151,6 +151,7 @@ html {
   background-color: #97A2AD;
   position: sticky;
   top: 0;
+  z-index: 1000;
 }
 .header-container .nav-items {
   display: flex;
