--- a/less/header.less
+++ b/less/header.less
@@ -1,20 +1,4 @@
-//-------NAV 
 
-.header-container{
-    .full-width-center();
-    background-color: @nav-bg;
-    position: sticky;
-    top: 0;
-    
-    .nav-items {
-        .flex-justify(space-between);
-        .mid-width-center();
-        font-size: @font-large;
-        font-weight: @bold;
-        color: @white;
-        padding: 1.3rem;
-    }
-}
 
 //-----Jumbotron
 
